deletes extra containers

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -255,7 +255,7 @@
             </article>
           </li>
           <li class="product-list__item">
-            <article class="product-list__item-content product product--show-more product--white">
+            <article class="product-list__item-content product product--white">
               <img class="product__ico" src="img/icon-plus-mobile.svg" width="31" height="31" alt="Плюс">
               <h3 class="product__feed-title product__feed-title--center">Показать еще 100500 товаров</h3>
               <p class="product__text main-text">На самом деле вкусов гораздо больше!</p>
@@ -335,16 +335,14 @@
 
       </section>
 
-      <section class="special">
+      <section class="section-wrapper__special special">
 
-        <div class="special__wrapper">
           <h2 class="visually-hidden">Акция</h2>
           <img class="special__ico" src="img/icon-gift.svg" width="56" height="61" alt="Подарок">
           <p class="special__text">
             Закажите все
             и&nbsp;получите чехол для кота в подарок!
           </p>
-        </div>
 
       </section>
 
