--- a/source/index.html
+++ b/source/index.html
@@ -110,57 +110,53 @@
 
     <section class="result">
 
+      <h2 class="result__title main-title container">Живой пример</h2>
       <div class="result__wrapper">
-        <h2 class="result__title main-title">Живой пример</h2>
         <div class="result__content">
-          <div class="result__content-wrapper">
-            <div class="result__text-wrapper">
-              <p class="result__text main-text main-text">
-                Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный
-                результат без
-                изнуряющих
-                тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-              </p>
-              <ul class="result__counter-list">
-                <li class="result__counter-item">
-                  <p class="result__counter">
-                    5 кг
-                  </p>
-                  <p class="result__border-text main-text">
-                    снижение веса
-                  </p>
-                </li>
-                <li class="result__counter-item">
-                  <p class="result__counter">
-                    60 дней
-                  </p>
-                  <p class="result__border-text main-text">
-                    затрачено времени
-                  </p>
-                </li>
-              </ul>
-              <p class="result__cost">
-                Затраты на питание: <span class="result__total-sum">15 000 руб.</span>
-              </p>
+          <div class="result__text-wrapper">
+            <p class="result__text main-text main-text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный
+              результат без
+              изнуряющих
+              тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <ul class="result__counter-list">
+              <li class="result__counter-item">
+                <p class="result__counter">
+                  5 кг
+                </p>
+                <p class="result__border-text main-text">
+                  снижение веса
+                </p>
+              </li>
+              <li class="result__counter-item">
+                <p class="result__counter">
+                  60 дней
+                </p>
+                <p class="result__border-text main-text">
+                  затрачено времени
+                </p>
+              </li>
+            </ul>
+            <p class="result__cost">
+              Затраты на питание: <span class="result__total-sum">15 000 руб.</span>
+            </p>
+          </div>
+          <div class="result__cat-wrapper">
+            <div class="result__image-wrapper">
+              <img class="result__image result__image--before result__image--active" src="img/before-mobile@1x.png"
+                alt="Кот до - полный" width="311" height="232">
+              <img class="result__image result__image--after" src="img/after-mobile@1x.png" alt="Кот после - стройный"
+                width="311" height="232">
             </div>
-            <div class="result__cat-wrapper">
-              <div class="result__cat-inner">
-                <div class="result__image-wrapper">
-                  <img class="result__image result__image--before result__image--active" src="img/before-mobile@1x.png"
-                    alt="Кот до - полный" width="311" height="232">
-                  <img class="result__image result__image--after" src="img/after-mobile@1x.png"
-                    alt="Кот после - стройный" width="311" height="232">
-                </div>
-                <div class="result__range-wrapper">
-                  <button type="button" class="result__btn">
-                    Было
-                  </button>
-                  <div class="result__range-bar"></div>
-                  <button type="button" class="result__btn">
-                    Стало
-                  </button>
-                </div>
-              </div>
+            <div class="result__range-wrapper">
+              <button type="button" class="result__btn">
+                Было
+              </button>
+              <div class="result__range-bar"></div>
+              <button type="button" class="result__btn">
+                Стало
+              </button>
             </div>
           </div>
         </div>
