add modifications for items list

--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
       <div class="categories__wrapper container">
         <h2 class="visually-hidden">Категории товаров</h2>
         <ul class="сategories__list">
-          <li class="categories__item">
+          <li class="categories__item categories__item--slim">
             <h3 class="categories__title">Похудение</h3>
             <p class="categories__text main-text">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету!
@@ -67,7 +67,7 @@
             </p>
             <a href="catalog.html#slim" class="categories__link">Каталог Slim</a>
           </li>
-          <li class="categories__item">
+          <li class="categories__item categories__item--mass">
             <h3 class="categories__title">Набор массы</h3>
             <p class="categories__text categories__text--short main-text">
               Заработать авторитет среди дворовых котов и даже собак?
@@ -85,24 +85,24 @@
       <div class="about-feed__wrapper container">
         <h2 class="about-feed__title main-title">Как это работает</h2>
         <ul class="about-feed__list">
-          <li class="about-feed__item">
+          <li class="about-feed__item about-feed__item--substance">
             <p class="about-feed__text main-text">
               Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
-          <li class="about-feed__item">
+          <li class="about-feed__item about-feed__item--water">
             <p class="about-feed__text main-text">
               Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="about-feed__item">
+          <li class="about-feed__item about-feed__item--food">
             <p class="about-feed__text main-text">
               Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
-          <li class="about-feed__item">
+          <li class="about-feed__item about-feed__item--time">
             <p class="about-feed__text main-text">
-              Уже через месяц наслаждайтесь изменениями к лучшему <br> вашего питомца!
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!
             </p>
           </li>
         </ul>
