decor elements part-2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -268,12 +268,13 @@
 
     </section>
 
-    <div class="section-wrapper container">
+    <div class="section-wrapper">
+      <div class="section-wrapper__inner container">
 
       <section class="аdditional-catalog">
 
         <div class="аdditional-catalog__wrapper">
-          <h2 class="аdditional-catalog__title">Дополнительные товары</h2>
+          <h2 class="аdditional-catalog__title title-decor">Дополнительные товары</h2>
           <ul class="аdditional-catalog__list аdditional-list">
             <li class="аdditional-list__item">
               <article class="аdditional-list__item-content аdditional-product">
@@ -347,6 +348,7 @@
 
       </section>
 
+      </div>
     </div>
 
   </main>
