--- a/source/form.html
+++ b/source/form.html
@@ -36,7 +36,7 @@
 
   </header>
 
-  <main class="main">
+  <main class="main main--overflow">
 
     <section class="program">
 
@@ -56,12 +56,12 @@
               <input class="form__field" type="text" name="cat-name" id="cat-name" placeholder="Барсик" required>
             </div>
             <div class="form__field-wrapper">
-              <label class="form__field-title" for="cat-weight">Вес(КГ):*</label>
+              <label class="form__field-title" for="cat-weight">Вес (КГ):*</label>
               <input class="form__field" type="number" min="0" name="cat-weight" id="cat-weight" placeholder="7"
                 required>
             </div>
             <div class="form__field-wrapper">
-              <label class="form__field-title" for="cat-age">Возраст(ЛЕТ):</label>
+              <label class="form__field-title" for="cat-age">Возраст (ЛЕТ):</label>
               <input class="form__field" type="number" min="0" name="cat-age" id="cat-age" placeholder="7">
             </div>
           </fieldset>
@@ -70,60 +70,68 @@
               <legend class="visually-hidden">Программа питания</legend>
               <ul class="form__radio-list form-list">
                 <li class="form__program-item form-list__item">
-                  <input class="form__program-radio" type="radio" name="program-feed" value="slim" id="program-slim"
+                  <input class="form__program-radio visually-hidden" type="radio" name="program-feed" value="slim" id="program-slim"
                     checked>
-                  <label class="form__field-title" for="program-slim">Похудение</label>
+                  <label class="form__field-title form__field-title--castom form__field-title--radio" for="program-slim">Похудение</label>
                 </li>
                 <li class="form__program-item form-list__item">
-                  <input class="form__program-radio" type="radio" name="program-feed" value="pro" id="program-pro">
-                  <label class="form__field-title" for="program-pro">Набор массы</label>
+                  <input class="form__program-radio visually-hidden" type="radio" name="program-feed" value="pro" id="program-pro">
+                  <label class="form__field-title form__field-title--castom form__field-title--radio" for="program-pro">Набор массы</label>
                 </li>
                 <li class="form__program-item form-list__item">
-                  <input class="form__program-radio" type="radio" name="program-feed" value="don't-know"
+                  <input class="form__program-radio visually-hidden" type="radio" name="program-feed" value="don't-know"
                     id="questionable">
-                  <label class="form__field-title" for="questionable">Не знаю (Нужен ваш совет)</label>
+                  <label class="form__field-title form__field-title--castom form__field-title--radio" for="questionable">Не знаю (Нужен ваш совет)</label>
                 </li>
               </ul>
             </div>
           </fieldset>
           <fieldset class="form__set">
-            <legend class="form__title">Контактные данные (владельца кота)</legend>
+            <legend class="form__title title-decor">Контактные данные <span class="form__subtitle">(владельца кота)</span></legend>
             <div class="form__contacts-wrapper">
               <div class="form__field-wrapper form__field-wrapper--ico">
                 <label class="form__field-title" for="email">E-mail:*</label>
                 <input class="form__field" type="email" name="email" id="email" placeholder="kuklachev@gmail.com"
                   required>
-                <svg class="form__ico form__ico--email" aria-label="Иконка письма"></svg>
+                <svg class="form__ico form__ico--email" aria-label="Иконка письма"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+                  <path d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
+                </svg>
               </div>
               <div class="form__field-wrapper form__field-wrapper--ico">
                 <label class="form__field-title" for="phone">Телефон:*</label>
                 <input class="form__field" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90" required>
-                <svg class="form__ico form__ico--phone" aria-label="Иконка телефона"></svg>
+                <svg class="form__ico form__ico--phone" aria-label="Иконка телефона"  version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
+                  <path d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
+                  <path d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+                    c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
+                    C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
+                    C7.8,20,8.1,19.7,8.1,19.4z"/>
+                </svg>
               </div>
             </div>
           </fieldset>
           <div class="form__set">
-            <p class="form__title form__title--single-field">Комментарий</p>
+            <p class="form__title form__title--single-field title-decor">Комментарий</p>
             <textarea class="form__comment-field" placeholder="Расскажите обо всех повадках кота"></textarea>
           </div>
           <fieldset class="form__set">
-            <legend class="form__title">Дополнительно</legend>
+            <legend class="form__title title-decor">Дополнительно</legend>
             <ul class="form__checkbox-list form-list">
               <li class="form__checkbox-item form-list__item">
-                <input class="form__additional-checkbox" type="checkbox" name="change-sugar" id="change-sugar" checked>
-                <label class="form__field-title" for="change-sugar">Сахарозаменитель</label>
+                <input class="form__additional-checkbox visually-hidden" type="checkbox" name="change-sugar" id="change-sugar" checked>
+                <label class="form__field-title form__field-title--castom form__field-title--checkbox" for="change-sugar">Сахарозаменитель</label>
               </li>
               <li class="form__checkbox-item form-list__item">
-                <input class="form__additional-checkbox" type="checkbox" name="water" id="water">
-                <label class="form__field-title" for="water">Питьевая вода</label>
+                <input class="form__additional-checkbox visually-hidden" type="checkbox" name="water" id="water">
+                <label class="form__field-title form__field-title--castom form__field-title--checkbox" for="water">Питьевая вода</label>
               </li>
               <li class="form__checkbox-item form-list__item">
-                <input class="form__additional-checkbox" type="checkbox" name="milk" id="milk">
-                <label class="form__field-title" for="milk">Молоко</label>
+                <input class="form__additional-checkbox visually-hidden" type="checkbox" name="milk" id="milk">
+                <label class="form__field-title form__field-title--castom form__field-title--checkbox" for="milk">Молоко</label>
               </li>
               <li class="form__checkbox-item form-list__item">
-                <input class="form__additional-checkbox" type="checkbox" name="vitamin" id="vitamin">
-                <label class="form__field-title" for="vitamin">Витамины</label>
+                <input class="form__additional-checkbox visually-hidden" type="checkbox" name="vitamin" id="vitamin">
+                <label class="form__field-title form__field-title--castom form__field-title--checkbox" for="vitamin">Витамины</label>
               </li>
             </ul>
           </fieldset>
