add tab index for result__range btn

--- a/source/index.html
+++ b/source/index.html
@@ -154,7 +154,7 @@
             <button type="button" class="result__btn">
               Было
             </button>
-            <div class="result__range-bar"><div class="result__range-trigger"></div></div>
+            <div class="result__range-bar"><div class="result__range-trigger" tabindex="0"></div></div>
             <button type="button" class="result__btn">
               Стало
             </button>
