add tablet and desktop images part-1

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,11 @@
     <div class="header__wrapper">
       <div class="header__inner">
         <a href="index.html" class="header__logo">
-          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Логотип cat energy">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Логотип cat energy">
+          </picture>
         </a>
         <button type="button" class="header__toggle header__toggle--nojs"
           aria-label="Открывает/закрывает главное меню"></button>
@@ -49,8 +53,15 @@
             <article class="product-list__item-content product">
               <div class="product__content-wrapper">
                 <a href="#" class="product__link">
-                  <img class="product__feed-image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144"
-                    alt="Корм cat energy, оранжевого цвета, со вкусом курицы - 500 грамм">
+                  <picture>
+                    <source media="(min-width: 1300px)"
+                      srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+                    <img class="product__feed-image" src="img/chicken-small-mobile@1x.jpg"
+                      srcset="img/chicken-small-mobile@2x.jpg 2x" width="140" height="144"
+                      alt="Корм cat energy, оранжевого цвета, со вкусом курицы - 500 грамм">
+                  </picture>
                 </a>
                 <div class="product__info-wrapper">
                   <a href="#" class="product__link">
@@ -79,8 +90,15 @@
             <article class="product-list__item-content product">
               <div class="product__content-wrapper">
                 <a href="#" class="product__link">
-                  <img class="product__feed-image product__feed-image--big" src="img/chicken-big-mobile@1x.jpg"
-                    width="140" height="144" alt="Корм cat energy, оранжевого цвета, со вкусом курицы - 1000 грамм">
+                  <picture>
+                    <source media="(min-width: 1300px)"
+                      srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
+                    <img class="product__feed-image product__feed-image--big" src="img/chicken-big-mobile@1x.jpg"
+                      srcset="img/chicken-big-mobile@2x.jpg 2x" width="140" height="144"
+                      alt="Корм cat energy, оранжевого цвета, со вкусом курицы - 1000 грамм">
+                  </picture>
                 </a>
                 <div class="product__info-wrapper">
                   <a href="#" class="product__link">
@@ -109,8 +127,15 @@
             <article class="product-list__item-content product">
               <div class="product__content-wrapper">
                 <a href="#" class="product__link">
-                  <img class="product__feed-image" src="img/fish-small-mobile@1x.jpg" width="140" height="144"
-                    alt="Корм cat energy, зелёного цвета, со вкусом рыбы - 500 грамм">
+                  <picture>
+                    <source media="(min-width: 1300px)"
+                      srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/fish-small-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
+                    <img class="product__feed-image" src="img/fish-small-mobile@1x.jpg"
+                      srcset="img/fish-small-mobile@2x.jpg 2x" width="140" height="144"
+                      alt="Корм cat energy, зелёного цвета, со вкусом рыбы - 500 грамм">
+                  </picture>
                 </a>
                 <div class="product__info-wrapper">
                   <a href="#" class="product__link">
@@ -139,8 +164,15 @@
             <article class="product-list__item-content product">
               <div class="product__content-wrapper">
                 <a href="#" class="product__link">
-                  <img class="product__feed-image product__feed-image--big" src="img/fish-big-mobile@1x.jpg" width="140"
-                    height="144" alt="Корм cat energy, зелёного цвета, со вкусом рыбы - 1000 грамм">
+                  <picture>
+                    <source media="(min-width: 1300px)"
+                      srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+                    <img class="product__feed-image product__feed-image--big" src="img/fish-big-mobile@1x.jpg"
+                      srcset="img/fish-big-mobile@2x.jpg 2x" width="140" height="144"
+                      alt="Корм cat energy, зелёного цвета, со вкусом рыбы - 1000 грамм">
+                  </picture>
                 </a>
                 <div class="product__info-wrapper">
                   <a href="#" class="product__link">
@@ -169,8 +201,15 @@
             <article class="product-list__item-content product">
               <div class="product__content-wrapper">
                 <a href="#" class="product__link">
-                  <img class="product__feed-image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144"
-                    alt="Корм cat energy, синего цвета, со вкусом гречкаи - 500 грамм">
+                  <picture>
+                    <source media="(min-width: 1300px)"
+                      srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+                    <img class="product__feed-image" src="img/buckwheat-small-mobile@1x.jpg"
+                      srcset="img/buckwheat-small-mobile@2x.jpg 2x" width="140" height="144"
+                      alt="Корм cat energy, синего цвета, со вкусом гречкаи - 500 грамм">
+                  </picture>
                 </a>
                 <div class="product__info-wrapper">
                   <a href="#" class="product__link">
@@ -199,8 +238,15 @@
             <article class="product-list__item-content product">
               <div class="product__content-wrapper">
                 <a href="#" class="product__link">
-                  <img class="product__feed-image product__feed-image--big" src="img/buckwheat-big-mobile@1x.jpg"
-                    width="140" height="144" alt="Корм cat energy, синего цвета, со вкусом гречки - 1000 грамм">
+                  <picture>
+                    <source media="(min-width: 1300px)"
+                      srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
+                    <img class="product__feed-image product__feed-image--big" src="img/buckwheat-big-mobile@1x.jpg"
+                      srcset="img/buckwheat-big-mobile@2x.jpg 2x" width="140" height="144"
+                      alt="Корм cat energy, синего цвета, со вкусом гречки - 1000 грамм">
+                  </picture>
                 </a>
                 <div class="product__info-wrapper">
                   <a href="#" class="product__link">
@@ -229,8 +275,15 @@
             <article class="product-list__item-content product">
               <div class="product__content-wrapper">
                 <a href="#" class="product__link">
-                  <img class="product__feed-image" src="img/rice-small-mobile@1x.jpg" width="140" height="144"
-                    alt="Корм cat energy, фиолетового цвета, со вкусом риса - 500 грамм">
+                  <picture>
+                    <source media="(min-width: 1300px)"
+                      srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+                    <img class="product__feed-image" src="img/rice-small-mobile@1x.jpg"
+                      srcset="img/rice-small-mobile@2x.jpg 2x" width="140" height="144"
+                      alt="Корм cat energy, фиолетового цвета, со вкусом риса - 500 грамм">
+                  </picture>
                 </a>
                 <div class="product__info-wrapper">
                   <a href="#" class="product__link">
@@ -257,7 +310,10 @@
           </li>
           <li class="product-list__item">
             <article class="product-list__item-content product product--white">
-              <img class="product__ico" src="img/icon-plus-mobile.svg" width="31" height="31" alt="Плюс">
+              <picture>
+                <source media="(min-width: 768px)" srcset="img/icon-plus.svg">
+                <img class="product__ico" src="img/icon-plus-mobile.svg" width="31" height="31" alt="Плюс">
+              </picture>
               <h3 class="product__feed-title product__feed-title--center">Показать еще 100500 товаров</h3>
               <p class="product__text main-text">На самом деле вкусов гораздо больше!</p>
               <a href="#" class="product__btn main-btn main-btn--gray">Показать все</a>
@@ -271,82 +327,82 @@
     <div class="section-wrapper">
       <div class="section-wrapper__inner container">
 
-      <section class="аdditional-catalog">
+        <section class="аdditional-catalog">
 
-        <div class="аdditional-catalog__wrapper">
-          <h2 class="аdditional-catalog__title title-decor">Дополнительные товары</h2>
-          <ul class="аdditional-catalog__list аdditional-list">
-            <li class="аdditional-list__item">
-              <article class="аdditional-list__item-content аdditional-product">
-                <div class="additional-product__info-wrapper">
-                  <h3 class="аdditional-product__title">Сахарозаменитель</h3>
-                  <table class="аdditional-product__cost cost main-text">
-                    <tr class="cost__wrapper">
-                      <td class="cost__name">1 упаковка (100 г)</td>
-                      <td class="cost__price">200 Р.</td>
-                    </tr>
-                  </table>
-                </div>
-                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-              </article>
-            </li>
-            <li class="аdditional-list__item">
-              <article class="аdditional-list__item-content аdditional-product">
-                <div class="additional-product__info-wrapper">
-                  <h3 class="аdditional-product__title">Питьевая вода</h3>
-                  <table class="аdditional-product__cost cost main-text">
-                    <tr class="cost__wrapper">
-                      <td class="cost__name">5 литров</td>
-                      <td class="cost__price">50 Р.</td>
-                    </tr>
-                  </table>
-                </div>
-                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-              </article>
-            </li>
-            <li class="аdditional-list__item">
-              <article class="аdditional-list__item-content аdditional-product">
-                <div class="additional-product__info-wrapper">
-                  <h3 class="аdditional-product__title">Молоко</h3>
-                  <table class="аdditional-product__cost cost  main-text">
-                    <tr class="cost__wrapper">
-                      <td class="cost__name">1 литр</td>
-                      <td class="cost__price">100 Р.</td>
-                    </tr>
-                  </table>
-                </div>
-                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-              </article>
-            </li>
-            <li class="аdditional-list__item">
-              <article class="аdditional-list__item-content аdditional-product">
-                <div class="additional-product__info-wrapper">
-                  <h3 class="аdditional-product__title">Витамины</h3>
-                  <table class="аdditional-product__cost cost main-text">
-                    <tr class="cost__wrapper">
-                      <td class="cost__name">1 упаковка (30 г)</td>
-                      <td class="cost__price">300 Р.</td>
-                    </tr>
-                  </table>
-                </div>
-                <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
-              </article>
-            </li>
-          </ul>
-        </div>
+          <div class="аdditional-catalog__wrapper">
+            <h2 class="аdditional-catalog__title title-decor">Дополнительные товары</h2>
+            <ul class="аdditional-catalog__list аdditional-list">
+              <li class="аdditional-list__item">
+                <article class="аdditional-list__item-content аdditional-product">
+                  <div class="additional-product__info-wrapper">
+                    <h3 class="аdditional-product__title">Сахарозаменитель</h3>
+                    <table class="аdditional-product__cost cost main-text">
+                      <tr class="cost__wrapper">
+                        <td class="cost__name">1 упаковка (100 г)</td>
+                        <td class="cost__price">200 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+                </article>
+              </li>
+              <li class="аdditional-list__item">
+                <article class="аdditional-list__item-content аdditional-product">
+                  <div class="additional-product__info-wrapper">
+                    <h3 class="аdditional-product__title">Питьевая вода</h3>
+                    <table class="аdditional-product__cost cost main-text">
+                      <tr class="cost__wrapper">
+                        <td class="cost__name">5 литров</td>
+                        <td class="cost__price">50 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+                </article>
+              </li>
+              <li class="аdditional-list__item">
+                <article class="аdditional-list__item-content аdditional-product">
+                  <div class="additional-product__info-wrapper">
+                    <h3 class="аdditional-product__title">Молоко</h3>
+                    <table class="аdditional-product__cost cost  main-text">
+                      <tr class="cost__wrapper">
+                        <td class="cost__name">1 литр</td>
+                        <td class="cost__price">100 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+                </article>
+              </li>
+              <li class="аdditional-list__item">
+                <article class="аdditional-list__item-content аdditional-product">
+                  <div class="additional-product__info-wrapper">
+                    <h3 class="аdditional-product__title">Витамины</h3>
+                    <table class="аdditional-product__cost cost main-text">
+                      <tr class="cost__wrapper">
+                        <td class="cost__name">1 упаковка (30 г)</td>
+                        <td class="cost__price">300 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a href="#" class="аdditional-product__btn main-btn">Заказать</a>
+                </article>
+              </li>
+            </ul>
+          </div>
 
-      </section>
+        </section>
 
-      <section class="section-wrapper__special special">
+        <section class="section-wrapper__special special">
 
-        <h2 class="visually-hidden">Акция</h2>
-        <img class="special__ico" src="img/icon-gift.svg" width="56" height="61" alt="Подарок">
-        <p class="special__text">
-          Закажите все
-          и&nbsp;получите чехол для кота в подарок!
-        </p>
+          <h2 class="visually-hidden">Акция</h2>
+          <img class="special__ico" src="img/icon-gift.svg" width="56" height="61" alt="Подарок">
+          <p class="special__text">
+            Закажите все
+            и&nbsp;получите чехол для кота в подарок!
+          </p>
 
-      </section>
+        </section>
 
       </div>
     </div>
