--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,11 @@
     <div class="header__wrapper">
       <div class="header__inner">
         <a href="index.html" class="header__logo">
-          <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Логотип cat energy">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Логотип cat energy">
+          </picture>
         </a>
         <button type="button" class="header__toggle header__toggle--nojs"
           aria-label="Открывает/закрывает главное меню"></button>
