--- a/source/form.html
+++ b/source/form.html
@@ -62,12 +62,12 @@
             </div>
             <div class="form__field-wrapper">
               <label class="form__field-title" for="cat-weight">Вес (КГ):*</label>
-              <input class="form__field" type="number" min="0" name="cat-weight" id="cat-weight" placeholder="7"
+              <input class="form__field" type="number" min="0" max="100" name="cat-weight" id="cat-weight" placeholder="7"
                 required>
             </div>
             <div class="form__field-wrapper">
               <label class="form__field-title" for="cat-age">Возраст (ЛЕТ):</label>
-              <input class="form__field" type="number" min="0" name="cat-age" id="cat-age" placeholder="7">
+              <input class="form__field" type="number" min="0" max="100" name="cat-age" id="cat-age" placeholder="7">
             </div>
           </fieldset>
           <fieldset class="form__set form__set--radio">
@@ -100,9 +100,9 @@
             <div class="form__contacts-wrapper">
               <div class="form__field-wrapper form__field-wrapper--ico">
                 <label class="form__field-title" for="email">E-mail:*</label>
-                <input class="form__field" type="email" name="email" id="email" placeholder="kuklachev@gmail.com"
+                <input class="form__field form__field--ico" type="email" name="email" id="email" placeholder="kuklachev@gmail.com"
                   required>
-                <svg class="form__ico form__ico--email" aria-label="Иконка письма" version="1.1" id="Layer_1"
+                <svg class="form__ico form__ico--email" version="1.1" id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
                   <path
@@ -111,8 +111,8 @@
               </div>
               <div class="form__field-wrapper form__field-wrapper--ico">
                 <label class="form__field-title" for="phone">Телефон:*</label>
-                <input class="form__field" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90" required>
-                <svg class="form__ico form__ico--phone" aria-label="Иконка телефона" version="1.1" id="Layer_1"
+                <input class="form__field form__field--ico" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90" required>
+                <svg class="form__ico form__ico--phone" version="1.1" id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
                   <path
@@ -181,11 +181,12 @@
         </div>
       </div>
       <div class="contacts__map">
+        <div class="contacts__google-map"></div>
         <picture>
           <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
           <img class="contacts__map-image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x"
-            alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="363">
+            alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург" width="320" height="363" data-object-fit="object-fit: cover; object-position: 50% 60%;">
         </picture>
       </div>
 
@@ -200,10 +201,11 @@
         </a>
         <ul class="footer-links__social social">
           <li class="social__item">
-            <a class="social__link" href="https://vk.com" aria-label="Вконтакте">
+            <a class="social__link" href="https://vk.com">
               <svg class="social__ico social__ico--vkontakte" version="1.1" id="Layer_1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+                <title>Вконтакте</title>
                 <path fill="#666666" d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
                         c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
                         s0.8-0.4,1-0.4h3.1c0.1,0,0.4,0.1,0.7,0.3C5.3,1,5.4,1.3,5.5,1.4c0.7,1.5,1.5,2.8,2.6,4C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1
@@ -221,10 +223,11 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="https://www.instagram.com" aria-label="Инстаграмм">
+            <a class="social__link" href="https://www.instagram.com">
               <svg class="social__ico social__ico--instagram" version="1.1" id="Layer_1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 16.1 16" style="enable-background:new 0 0 16.1 16;" xml:space="preserve">
+                <title>Инстаграмм</title>
                 <style type="text/css">
                 </style>
                 <path class="st0" fill="#666666"
@@ -237,10 +240,11 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link" href="https://www.facebook.com" aria-label="Фейсбук">
+            <a class="social__link" href="https://www.facebook.com">
               <svg class="social__ico social__ico--facebook" version="1.1" id="Layer_1"
                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
+                <title>Фейсбук</title>
                 <path fill="#666666"
                   d="M7.1,19H2v-8.8H0V5.8h1.9C1.8,3.8,2.1,2.4,3,1.4C3.8,0.5,5,0.1,6.5,0H10v4.2H7.2C7.1,4.4,7,5,7,5.8h3v4.4H7.1V19z M3.1,18
                             h2.8V9.1h2.9V6.8H5.9V6.3c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6H1.1v2.3h2V18z" />
@@ -252,6 +256,7 @@
           <a class="company-link__text main-text" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           <a href="https://htmlacademy.ru/intensive/adaptive">
             <svg class="company-link__ico" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 60">
+              <title>Логотип HTML Academy</title>
               <path fill="#666666"
                 d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
             </svg>
@@ -263,7 +268,11 @@
 
   </footer>
 
+  <script src="js/ofi.js"></script>
   <script src="js/main.js"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV4jlxcUZTr5NSO7sRpJ2ncW_itcauXBY&callback=initMap">
+    </script>
 </body>
 
 </html>
