del unnecessary js file

--- a/source/form.html
+++ b/source/form.html
@@ -268,7 +268,7 @@
 
   </footer>
 
-  <script src="js/ofi.js"></script>
+  <script src="js/ofi.min.js"></script>
   <script src="js/main.js"></script>
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCV4jlxcUZTr5NSO7sRpJ2ncW_itcauXBY&callback=initMap">
